--- a/scss/app.scss
+++ b/scss/app.scss
@@ -54,7 +54,8 @@
 // }
 
 // Or selectively include components
-@import "foundation/components/thumb-caption.scss";
+@import "foundation/components/thumb-caption";
+@import "foundation/components/featuredarticle"
 
 // @import
   // "foundation/components/accordion",
