--- a/scss/app.scss
+++ b/scss/app.scss
@@ -54,8 +54,9 @@
 // }
 
 // Or selectively include components
+
 @import "foundation/components/thumb-caption";
-@import "foundation/components/featuredarticle"
+@import "foundation/components/featuredarticle";
 
 // @import
   // "foundation/components/accordion",
