--- a/scss/app.scss
+++ b/scss/app.scss
@@ -55,7 +55,7 @@
 
 // Or selectively include components
 @import "foundation/components/thumb-caption";
-@import "foundation/components/featuredarticle"
+@import "foundation/components/featuredarticle";
 
 // @import
   // "foundation/components/accordion",
