--- a/scss/app.scss
+++ b/scss/app.scss
@@ -57,6 +57,7 @@
 
 @import "foundation/components/thumb-caption";
 @import "foundation/components/featuredarticle";
+@import "foundation/components/hti";
 
 // @import
   // "foundation/components/accordion",
