working validation form

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -58,6 +58,7 @@
 @import "foundation/components/thumb-caption";
 @import "foundation/components/featuredarticle";
 @import "foundation/components/hti";
+@import "foundation/components/social-signup"
 
 // @import
   // "foundation/components/accordion",
